# pytest_start

./: .gitignore  README.md  pyproject.toml  setup.py
src/tasks/: tasksdb_tinydb.py
tests/: conftest.py
tests/func/: test_add.py  test_add_variety.py  test_add_variety_2.py  test_api_exceptions.py  test_count.py  test_unique_id_1.py  test_unique_id_2.py  test_unique_id_3.py  test_unique_id_4.py
tests/tests_learn/: test_autouse.py  test_hw_p3.py  test_p001.py  test_p002.py  test_rename_fixture.py  test_scope.py
tests/tests_learn/tests_part_01/: test_02.py  test_03.py
tests/unit/: test_task.py
