[project]
name = "pytest-project"
version = "0.1.0"
description = "My first pytest project"
authors = [
    {name = "Viacheslav",email = "iexploudi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "pytest_project", from = "src"}]

[tool.pytest.ini_options]
markers = [
    "run_these_please: marks tests",
    "chart_2: marks tests for charter 2",
    "smoke: mark for smoke tests",
    "get: some mark"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
selenium = "^4.31.0"
requests = "^2.32.3"
six = "^1.17.0"
click = "^8.1.8"
tinydb = "^4.8.2"
setuptools = "^79.0.1"
debugpy = "^1.8.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
